--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -33,7 +33,8 @@
   &_logo {
     width: 100%;
 
-    span {
+    .footer_logo_title,
+    .footer_logo_sub_title {
       display: block;
       width: 100%;
 
