--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 @keyframes up-to {
   0% {
-    height: 0%;
+    height: 0;
   }
   100% {
     height: 100%;
@@ -880,7 +880,7 @@ fieldset {
 
 .footer_svg {
   position: absolute;
-  top: 0%;
+  top: 0;
   width: 100%;
   transform: rotate(180deg);
 }
@@ -1043,7 +1043,7 @@ fieldset {
 .link_more .about_arrow .next {
   display: inline-block;
   position: absolute;
-  top: 0%;
+  top: 0;
   width: 100%;
   height: 100%;
   transition: 0.2s;
@@ -1058,7 +1058,7 @@ fieldset {
 }
 .link_more .about_arrow .prev {
   position: absolute;
-  right: 0%;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1079,7 +1079,7 @@ fieldset {
   right: -100%;
 }
 .link_more:hover .next {
-  right: 0%;
+  right: 0;
 }
 
 .container {
