--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -155,7 +155,7 @@
     .next {
       display: inline-block;
       position: absolute;
-      top: 0%;
+      top: 0;
       width: 100%;
       height: 100%;
       transition: 0.2s;
@@ -169,7 +169,7 @@
 
     .prev {
       position: absolute;
-      right: 0%;
+      right: 0;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -197,7 +197,7 @@
     }
 
     .next {
-      right: 0%;
+      right: 0;
     }
   }
 }
